add sponsor by id
